# DPBO

./: org.gtk.ver1.json
src/: application.vala  catatan.ui  catatan.vala  dashboard.ui  dashboard.vala  gtk_app.gresource.xml  main.vala  menu.ui  menu.vala  meson.build  register.ui  register.vala  style.css  window.ui  window.vala
